# pdfhikaku

./: .env.example  Home.py  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  README.md  README_Enhanced_RAG.md  app.py  backup.py  chatbot_app.py  comparison_report.csv  comparison_report.html  dashboard_app.py  debug_pattern_match.py  err_plotly.py  examples.md  full_integration_test.py  pdfhikaku.py  pyproject.toml  rag.py  reflection_0822.py  run_app.py  sample_plotly copy.py  sample_plotly_2.py  simple_integration_test.py  squadbase.yml  start.sh  test_api.py  test_comparison.py  test_enhanced_rag.py  test_explanation_normalization.py  test_pipeline.py  test_search.py  test_section_chapter_integration.py  test_section_integration.py  test_section_only.py
.cache/embeddings/: chunks_a.pkl  chunks_b.pkl  titles_a.pkl  titles_b.pkl
app/: __init__.py  align.py  bookmarks.py  chunker.py  config.py  diffing.py  embeddings.py  extractors.py  headings.py  main.py  report.py  scoring.py  utils.py
assets/: report_template.html
configs/: config.yaml.example
data/: company_policies_rag_dataset.txt
pdfhikaku.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
reports/: chapters_a.json  chapters_b.json
todo_app/: pyproject.toml  streamlit_app.py
todo_app/app/: __init__.py  settings.py
todo_app/app/charts/: __init__.py  burndown.py
todo_app/app/data/: __init__.py  database.py  repositories.py
todo_app/app/models/: __init__.py  category.py  tag.py  task.py
todo_app/app/scheduler/: __init__.py  reminder.py
utils/: pinecone_io.py  text_chunk.py
(+9 files in other folders)
